tests/check_output/snapshots/errors__check_output__main@component_on_impl.snap
---
source: tests/check_output/mod.rs
expression: pretty
---
Stdout:


Stderr:
error: expected `trait`
       
         = help: `#[component(...)]` is expected to be placed on a trait
       
  --> examples/component_on_impl.rs:45:1
   |
45 | impl<H: Heater, P: Pump> CoffeeShop<H, P> {
   | ^^^^

error[E0433]: failed to resolve: use of undeclared type `DirkCoffeeShop`
  --> examples/component_on_impl.rs:22:23
   |
22 |     let coffee_shop = DirkCoffeeShop::create();
   |                       ^^^^^^^^^^^^^^
   |                       |
   |                       use of undeclared type `DirkCoffeeShop`
   |                       help: a struct with a similar name exists: `CoffeeShop`

For more information about this error, try `rustc --explain E0433`.
error: could not compile `coffee` (example "component_on_impl") due to 2 previous errors
